Workflow selector dropdown scrollbar fix (#2209)
* Keep the dropdown at the top when scrolling down the page

* Remove scroll locking to prevent body scrollbar jumps

* adds scroll shadow back to workflow tracker (#2210)

--- a/packages/web-client/app/components/card-pay/header/workflow-tracker/index.css
+++ b/packages/web-client/app/components/card-pay/header/workflow-tracker/index.css
@@ -12,7 +12,7 @@
   max-width: var(--workflow-tracker-max-width);
   min-height: var(--workflow-tracker-max-width);
   max-height: var(--workflow-tracker-max-height);
-  position: fixed;
+  position: absolute;
   top: 6rem;
   right: var(--boxel-sp-lg);
   background-color: var(--workflow-tracker-background);
